[gd_scene load_steps=8 format=2]

[ext_resource path="res://Font/Another Danger - Demo.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Menu/Menu.gd" type="Script" id=2]
[ext_resource path="res://Font/UnfinishedScreamRegular.otf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 95
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0.160784, 0.0431373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main" type="VBoxContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameTitle" type="Label" parent="ColorRect/Main"]
margin_right = 1024.0
margin_bottom = 165.0
custom_colors/font_color = Color( 0.592157, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Volcano Juice !"
align = 1
valign = 1

[node name="Menu" type="VBoxContainer" parent="ColorRect/Main"]
margin_top = 169.0
margin_right = 1024.0
margin_bottom = 312.0
alignment = 1

[node name="Start" type="Button" parent="ColorRect/Main/Menu"]
margin_right = 1024.0
margin_bottom = 45.0
grow_horizontal = 0
grow_vertical = 0
custom_fonts/font = SubResource( 2 )
text = "Start"

[node name="Credits" type="Button" parent="ColorRect/Main/Menu"]
margin_top = 49.0
margin_right = 1024.0
margin_bottom = 94.0
custom_fonts/font = SubResource( 3 )
text = "Credits"

[node name="Quit" type="Button" parent="ColorRect/Main/Menu"]
margin_top = 98.0
margin_right = 1024.0
margin_bottom = 143.0
custom_fonts/font = SubResource( 4 )
text = "Quit"

[connection signal="pressed" from="ColorRect/Main/Menu/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="ColorRect/Main/Menu/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="ColorRect/Main/Menu/Quit" to="." method="_on_Quit_pressed"]
